--- a/content/sponsors/oreilly.html
+++ b/content/sponsors/oreilly.html
@@ -1,7 +1,7 @@
 ---
 title: "O’Reilly"
 url: http://www.oreilly.com
-disabled: false
+disabled: true
 ---
 <p>Once again, we are proud to have O’Reilly as one of our sponsors.</p>
 
