schedule: reap another 2013 reference

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -94,7 +94,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 <a name="beerevent"></a>
 <h3>Friday beer event</h3>
 <p>
-  As tradition has it, on Friday the 1st of February we have the beer event.
+  As tradition has it, on Friday before FOSDEM we have the beer event.
   More information can be found on <a
     href="<%= pathof '/practical/beerevent/'%>">this</a>
   page.
