Removed broken map links. Added note that the info on public transport may be outdated.

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -20,8 +20,6 @@ If you are afraid of getting lost, the following links might help you:</p>
 <ul class="unstyled">
   <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.google.com/maps?ie=UTF8&amp;z=17&amp;ll=50.812375,4.380734&amp;spn=0.005369,0.011373&amp;om=1">Google Maps</a></li>
   <li><i class="icon-map-marker"></i> <a target="_blank" href="http://openstreetmap.org/?lat=50.81259&amp;lon=4.38137&amp;zoom=17&amp;layers=00B0FTF">OpenStreetMap</a></li>
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://www.map24.com/search?q=m24flnlFR7MvZTgC/iBlrIDJ9q_zns46z5JHE6pTcT2YkZz4Ym0spDlm7H0Gn1g5hzB0ySchZzndK22JfctXHKdV1J1y80brc5lwUnawdlLVoVOYIsWanA4z7CBlG98O5NTTU5ew7IpBWTG_vAi_qY7zQK_Pao6HCOoOfUvre3zDLsF68o1pXca/41GC_1l5aWa/yWIQ4RGzqDydGGiV0zKQT0f89Tbe0YU5sIsr4TFfEUr_GCG_GIvKDFyp2UPnNdVd/xma/">Map24</a>
-  <li><i class="icon-map-marker"></i> <a target="_blank" href="http://www.viamichelin.fr/viamichelin/int/dyn/controller/Cartes-plans?mapId=-tg6r70e5ejn8cp&amp;dx=352.5&amp;dy=179&amp;empriseW=989&amp;empriseH=702">Viamichelin</a></li>
   <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.yahoo.com/#q=Paul+H%C3%A9gerlaan+2%2C+1000+Brussels%2C+Belgium&conf=1&start=1&lat=50.81282&lon=4.380622&zoom=17&mvt=m&trf=0&tt=">Yahoo! Maps</a></li>
 </ul>
 <p>
@@ -36,70 +34,12 @@ Or if you prefer GPS coordinates:
 
 <hr />
 <a name="bus"></a><h3>By Bus and/or Tram</h3>
-<p>From Sunday afternoon till Sunday evening, FOSDEM provides free transportation by bus from the conference site (ULB Campus Solbosch) to the <a href="http://en.wikipedia.org/wiki/Brussels-South_railway_station">Brussels-South railway station</a> which has the best connections to Brussels Airport and neighboring countries.</p>
-<p>The FOSDEM bus will pick up people at the main bus stop on the <q>Avenue de l'Université</q> road facing the ULB. You'll find the exact location on <a href="http://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=&amp;daddr=50.813987,4.384887&amp;hl=en&amp;geocode=&amp;mra=dme&amp;mrcr=0&amp;mrsp=1&amp;sz=20&amp;sll=50.813967,4.384828&amp;sspn=0.000759,0.002064&amp;ie=UTF8&amp;t=h&amp;z=20">this map</a> or simply follow the signs at the venue.</p>
 
-<p>Based on previous years, we expect the bus to be busiest between 17:10 and 18:45. If you don't want to risk having to wait for the next bus, we advise you to leave <del>earlier</del> later. There are plenty of bars in the neighborhood to pass the time.</p>
-<p>We hope you enjoy this free service!</p>
+<div class="label label-info">
+This information may be outdated by February 2014 and will be updated closer to
+the time.
+</div>
 
-<p>
-<div class="container-fluid">
-<div class="row-fluid">
-<div class="span3">
-<table class="table table-striped table-bordered table-condensed">
-   <thead>
-     <tr>
-       <th>Departure</th>
-       <th>Arrival</th>
-       <th>Departure</th>
-       <th>Arrival</th>
-     </tr>
-   </thead>
-   <tbody>
-     <tr>
-       <td>15:00</td>
-       <td>15:25</td>
-       <td>18:00</td>
-       <td>18:25</td>
-     </tr>
-     <tr>
-       <td>15:30</td>
-       <td>15:55</td>
-       <td>18:30</td>
-       <td>18:55</td>
-     </tr>
-     <tr>
-       <td>16:00</td>
-       <td>16:25</td>
-       <td>19:00</td>
-       <td>19:25</td>
-     </tr>
-     <tr>
-       <td>16:30</td>
-       <td>16:55</td>
-       <td>19:30</td>
-       <td>19:55</td>
-     </tr>
-     <tr>
-       <td>17:00</td>
-       <td>17:25</td>
-       <td>20:00</td>
-       <td>20:25</td>
-     </tr>
-     <tr>
-       <td>17:30</td>
-       <td>17:55</td>
-       <td>20:30</td>
-       <td>20:55</td>
-     </tr>
-   </tbody>
-</table>
-</div>
-</div>
-</div>
-</p>
-
-<a name="regular"></a><h3>Regular transport</h3>
 <p>Metro/Tram/Bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
 <dt><strong>
