Replaced map on front page

--- a/content/index.html
+++ b/content/index.html
@@ -76,7 +76,10 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <h2>LOCATION</h2>
     <p>FOSDEM will take place at the ULB Campus Solbosch, <strong>Brussels,</strong> <span>Belgium,</span> Europe, Earth.</p>
     <div class="location-info">
-      <div class="map"><img src="asset:map"/></div>
+      <div class="map">
+        <img style="float: right; text-align: right" src="asset:campusmap"
+width="372" height="261" alt="ULB Campus Solbosch map: Location of FOSDEM" title="ULB Campus Solbosch map: Location of FOSDEM"}/>
+      </div>
       <div class="location-text">
         <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
         <ul class="location-list">
