beerevent: updated beer menu link

--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -40,9 +40,9 @@ opportunity to taste some of the finest
   There are 25 different draught beers available.
   In addition to these, there is a cellar full of regular and specialty bottled
   beer.
-  The <a href="http://www.deliriumcafe.be/carte/beers.php?lang=en">beer menu</a>
-  on the bar’s website, while always out of date, is a good indication of the
-  wide selection available.
+  The <a href="http://deliriumcafe.be/categorylisting/">beer menu</a> on the
+  bar’s website, while always out of date, is a good indication of the wide
+  selection available.
 </p>
 
 <h2>Beer Distribution Algorithm v3.2 (stable)</h2>
