beerevent: updated one more link

--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -30,7 +30,7 @@ opportunity to taste some of the finest
   <a href="http://en.wikipedia.org/wiki/Grand_Place">Grand Place</a>
   in Brussels.
   In addition to the
-  <a href="http://www.deliriumcafe.be/carte/?lang=en">enormous variety in
+  <a href="http://deliriumcafe.be/categorylisting/">enormous variety in
     beers</a>,
   the location also has enough room to accommodate the vast crowd of geeks we
   tend to be.
