--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -15,7 +15,7 @@ klist = conference()[:title].downcase.gsub(/\s+/,"")
   opportunity to strengthen the web of trust.  We use a slightly modified
   version of the <a href="https://en.wikipedia.org/wiki/Zimmermann%E2%80%93Sassaman_key-signing_protocol">
     Zimmermann-Sassaman key-signing protocol</a> relying on a key submission
-  server rather than email to to collect keys.
+  server rather than email to collect keys.
 </p>
 
 <% if conf.fetch(:submission_notyet) %>
