Improve the About FOSDEM page

--- a/content/about.html
+++ b/content/about.html
@@ -8,80 +8,59 @@ navtitle: About
   </div>
   <div class="text-block">
     <h3>
-	The Free and Open source Software Developers’ European Meeting (FOSDEM)
-        is a two-day event organized by volunteers to promote the widespread
-        use of Free and Open Source software.
+        FOSDEM is a two-day event organised by volunteers to promote the
+        widespread use of open source software.
     </h3>
     <p>
-	Taking place in the beautiful city of
+        Taking place in the beautiful city of
         <a href="page:practical/transportation">Brussels (Belgium)</a>, FOSDEM
-        meetings are recognized as
-
-        <q>The best Free Software and Open Source events in Europe</q>.
+        is widely recognised as <q>the best open source conference in Europe</q>.
     </p>
   </div>
 </div>
-<div class="info-block">
-  <div class="more-info">
-    <h2>More information</h2>
-      <div class="row">
-        <strong>Mailing list:</strong>
-        <a href="https://lists.fosdem.org/listinfo/fosdem">fosdem at lists.fosdem.org</a>
-      </div>
-      <div class="info-note">
-        We will inform you when news about FOSDEM is available.
-      </div>
-      <div class="row">
-        <strong>News:</strong>
-        <a href="page:atom">atom feed</a>, <a href="page:rss">RSS feed</a>
-      </div>
-    </div>
+
+<div class="developers-block">
     <div class="text-block">
       <h2>What is FOSDEM?<a name="what">&nbsp;</a></h2>
       <p>
-        FOSDEM is a free and non-commercial event organized by the community
-        for the community. The goal is to provide Free Software and Open Source
-        developers and communities a place to meet to:
+        FOSDEM is a free and non-commercial event organised by the community for
+        the community.  The goal is to provide open source software developers
+        and communities a place to meet to:
 
         <ul class="info-list">
           <li>
             get in touch with other developers and projects;
           </li>
           <li>
-            be informed about the latest developments in the Free Software and
-            Open Source world;
+            be informed about the latest developments in the open source world;
           </li>
           <li>
             attend interesting talks and presentations on various topics by
-            Free Software and Open Source project leaders and committers;
+            open source project leaders and committers;
           </li>
           <li>
-            to promote the development and the benefits of Free Software and
-            Open Source solutions.
+            to promote the development and the benefits of open source
+            solutions.
           </li>
         </ul>
       </p>
       <p>
         Participation and attendance is <em>totally free</em>, though the
-        organization gratefully accepts donations and sponsorships.
+        organisers gratefully accept donations and sponsorship.
       </p>
     </div>
-</div>
-<div class="developers-block">
   <div class="text-block">
-    <h2>Developer Rooms</h2>
+    <h2>Developer rooms</h2>
     <p>
-      The FOSDEM team thinks it is very important for Free Software and Open
-      Source developers around the world to be able to meet in “real life”.
+      The FOSDEM team feels it is very important for open source software
+      developers around the world to be able to meet in “real life”.
     </p>
     <p>
-      To this end, we have set up Developer Rooms (DevRooms) with
-      network/internet connectivity and projectors where development teams
-      can meet and showcase their projects. DevRooms are a place for teams to
-      discuss, hack and publicly present latest directions, lightning talks,
-      news and discussions.
-    </p>
-    <p>
+      To this end, we have set up developer rooms (devrooms) with
+      network/internet connectivity and projectors where teams can meet and
+      showcase their projects.  Devrooms are a place for teams to discuss, hack
+      and publicly present latest directions, lightning talks, news and
+      discussions.
       We believe developers can benefit a lot from these meetings.
     </p>
     <p>
@@ -91,45 +70,38 @@ navtitle: About
     </p>
   </div>
   <div class="text-block">
-    <h2>A Bit of History</h2>
+    <h2>A bit of history</h2>
     <p>
       In 2000, Raphael Bauduin, a fan of the Linux movement in Belgium, decided
-      to organize a small meeting for developers of Open Source software. He
-      called it: Open Source Developers' European Meeting (OSDEM).
+      to organise a small meeting for developers of Open Source software. He
+      called it 'Open Source Developers’ European Meeting' (OSDEM).
     </p>
 
     <p>
       Raphael created a mailing list, a small website and spread the word to
       people around him. Only a few weeks later, lots of people were waiting for
-      an exciting event in Brussels!
-    </p>
-
-    <p>
-      Invitations were sent to well-known figures in the community: Rasterman,
-      Fyodor, Jeremy Allison and so on. They all gave a very positive response
-      and OSDEM was on the road to success.
+      an exciting event in Brussels! Invitations were sent to well-known
+      figures in the community: Rasterman, Fyodor, Jeremy Allison and so on.
+      They all gave a very positive response, and OSDEM was on the road to
+      success.
     </p>
 
     <p>
       For the second year, OSDEM was renamed FOSDEM. And now, many years later,
       it has grown into the event it is today.
+      We now try to cover a wide spectrum of open source projects, and offer a
+      platform for people to collaborate in the true open source spirit.  Every
+      year, we host more than 5000 developers at the ULB Solbosch campus.
     </p>
 
     <p>
-      We now try to cover a wide spectrum of Open Source and Free Software
-      projects, and offer a platform for people to collaborate in the true Open
-      Source spirit.  Every year, usually during the last weekend of February,
-      we host around 5000 visitors at the ULB Solbosh campus.
-    </p>
-
-    <p>
-      Raphael is no longer the only one driving FOSDEM. After 7 years of hard
-      work he left the team for new Open Source plans. The FOSDEM flag is now
-      proudly carried by the following people:
+      Raphael is no longer the driving force behind FOSDEM. After 7 years of
+      hard work he left the team for new Open Source plans. The FOSDEM flag
+      is now proudly carried by the following people:
     </p>
   </div>
   <div class="text-block">
-    <a name="team"></a><h2>The Team</h2>
+    <a name="team"></a><h2>The team</h2>
     <small>in alphabetical order</small>
     <ul>
       <li>Alain Buret</li>
