sponsors: point to our contact information

--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -4,10 +4,13 @@ no_sponsors: true
 sponsors_root: true
 ---
 <p>
-FOSDEM would not be possible without the generous help of our sponsors.
+  FOSDEM would not be possible without the generous help of our sponsors. Thank
+  you very much!
 </p>
 <p>
-Thank you very much!
+  If you are interested in sponsoring FOSDEM, send us an email at
+  <a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a> or see our
+  <%= l('/contact/', 'contact') %> page for more information.
 </p>
 <div id="s-quick-links">
     <% [ lambda{|s| s.cornerstone?}, lambda{|s| not s.cornerstone?} ].each_with_index do |row, i| %>
