news/accommodation: Announced offer from FunKey

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -17,6 +17,99 @@ places to stay.</p>
   Brussels has a large selection of hotels in every price range.
 </p>
 
+<a name="hotels-funkey"></a><h3>FunKey</h3>
+<p>
+  FunKey Hotel is a newly opened hotel in Brussels. For FOSDEM 2014,
+  FunKey Hotel has decided to offer special prices for FOSDEM attendees,
+  with the intent of turning it into a hotel dedicated to FOSDEM attendees
+  during the first weekend of February.
+</p>
+
+<p>
+  Their offer includes the following:
+
+  <ul>
+    <li>25 Euro per bed, per night</li>
+    <li>Breakfast</li>
+    <li>Wireless network</li>
+    <li>24/7 snacking and beverages</li>
+    <li>Free parking</li>
+    <li>The use of their Chromebook laptops</li>
+    <li>The use of their mobile phones (with unlimited calls in Belgium)</li>
+  </ul>
+</p>
+
+<p>
+  They have the following fully equipped rooms available:
+
+  <ul>
+    <li>9x 2-bed rooms</li>
+    <li>18x 3-bed rooms</li>
+    <li>7x 4-bed rooms</li>
+  </ul>
+</p>
+
+<p>
+  The offer of 25EUR/bed/night is valid for Friday and Saturday night. It
+  can be extended to Sunday if there are enough bookings.
+</p>
+
+<p>
+  Please try to book as groups of 2, 3, or 4 friends or colleagues. It is
+  also possible to book just one bed and share a room with people you
+  don't know.
+</p>
+
+<p>
+  If you are interested, all you have to do is send an e-mail to Guillaume
+  at <a href="mailto:guillaume@funkeyhotel.com">guillaume@funkeyhotel.com</a>,
+  indicating:
+
+  <ul>
+    <li>Your name(s)</li>
+    <li>How many beds you wish to book</li>
+    <li>If you wish to book both Friday and Saturday night, or only Saturday night</li>
+    <li>If you might be interested in staying Sunday night as well</li>
+  </ul>
+</p>
+
+<p>
+  People wishing to book both Friday and Saturday night have priority
+  until 2013-10-01. This means that Saturday night only bookings will only
+  be confirmed after this date. Bookings for both Friday an Saturday night
+  can be paid immediately and will be instantly confirmed.
+</p>
+
+<p>
+  Payment must be made in advance and is nonrefundable. Guillaume will
+  send you details on how to proceed after you have e-mailed him. You will
+  have the possibility of paying either online with Visa, MasterCard or
+  Bancontact (no American Express, Carte Bleue, Visa Electron or others)
+  or by IBAN.
+</p>
+
+<p>
+  If the hotel is sufficiently booked by FOSDEM attendees by 2013-11-01,
+  it will be declared a dedicated FOSDEM attendee hotel and bookings will
+  be permanently closed for non-FOSDEM attendees. FOSDEM guests will then
+  be able to use the common spaces of the hotel (breakfast room, meeting
+  rooms, ...) at their leisure during their stay, providing for a
+  convivial atmosphere and an unforgetable experience!
+</p>
+
+<p>
+  You can learn more about the FunKey here:
+  <a href="http://funkeyhotel.com">http://funkeyhotel.com</a>
+  If you have any questions about this offer, please direct them to
+  Guillaume at <a href="mailto:guillaume@funkeyhotel.com">guillaume@funkeyhotel.com</a>.
+</p>
+
+<p>
+  Please note that this is an offer from a third party extended to FOSDEM
+  attendees. FOSDEM organisers have no relationship with FunKey. We only
+  forward their offer to our attendees.
+</p>
+
 <h2>CouchSurfing / BeWelcome</h2>
 <p>Are you looking for a couch or do you maybe have one to offer?
 Join the FOSDEM <a target="_new" href="http://www.couchsurfing.com/group.html?gid=16380">CouchSurfing</a>
