news/accommodation: update offer from FunKey

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -50,8 +50,7 @@ places to stay.</p>
 </p>
 
 <p>
-  The offer of 25EUR/bed/night is valid for Friday and Saturday night. It
-  can be extended to Sunday if there are enough bookings.
+  The offer of 25EUR/bed/night is valid for Friday, Saturday and Sunday night.
 </p>
 
 <p>
@@ -69,7 +68,7 @@ places to stay.</p>
     <li>Your name(s)</li>
     <li>How many beds you wish to book</li>
     <li>If you wish to book both Friday and Saturday night, or only Saturday night</li>
-    <li>If you might be interested in staying Sunday night as well</li>
+    <li>If you wish to book Sunday night as well</li>
   </ul>
 </p>
 
