--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -17,6 +17,21 @@ places to stay.</p>
   Brussels has a large selection of hotels in every price range.
 </p>
 
+<a name="hotels-bbd"></a><h3>Discounts</h3>
+<p>
+  Thanks to Brussels Booking Desk, a number of hotels have made a discounted
+  rate available to FOSDEM visitors. Check
+  <a href="https://secure.visitbrussels.be/portal/belgie/brussel-whitelabel/extendedSearch?package=258&lang=en">their website</a>
+  for more information.
+</p>
+
+<p>
+  Please note that this is an offer from a third party extended to FOSDEM
+  attendees. FOSDEM organisers have no relationship with Brussels Booking
+  Desk or the hotels mentioned on their website. We only forward their offer
+  to our attendees.
+</p>
+
 <a name="hotels-funkey"></a><h3>FunKey</h3>
 <p>
   FunKey Hotel is a newly opened hotel in Brussels. For FOSDEM 2014,
