accommodation: Update FunKey offer

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -65,6 +65,10 @@ places to stay.</p>
 </p>
 
 <p>
+  <b>Update 20131030: only 30 beds left in 3- or 4-bed rooms</b>
+</p>
+
+<p>
   The offer of 25EUR/bed/night is valid for Friday, Saturday and Sunday night.
 </p>
 
@@ -90,7 +94,7 @@ places to stay.</p>
 <p>
   People wishing to book both Friday and Saturday night have priority
   until 2013-10-01. This means that Saturday night only bookings will only
-  be confirmed after this date. Bookings for both Friday an Saturday night
+  be confirmed after this date. Bookings for both Friday and Saturday night
   can be paid immediately and will be instantly confirmed.
 </p>
 
@@ -103,6 +107,14 @@ places to stay.</p>
 </p>
 
 <p>
+  For Friday and Saturday night, the hotel is dedicated only to FOSDEM
+  attendees. You will be able to use the common spaces of the hotel
+  (breakfast room, meeting rooms, ...) at your leisure during your stay,
+  convivial atmosphere and an unforgetable experience!
+</p>
+
+<!--
+<p>
   If the hotel is sufficiently booked by FOSDEM attendees by 2013-11-01,
   it will be declared a dedicated FOSDEM attendee hotel and bookings will
   be permanently closed for non-FOSDEM attendees. FOSDEM guests will then
@@ -110,6 +122,7 @@ places to stay.</p>
   rooms, ...) at their leisure during their stay, providing for a
   convivial atmosphere and an unforgetable experience!
 </p>
+-->
 
 <p>
   You can learn more about the FunKey here:
