Bring content in sync with reality
We're assigning only one devroom this year, but the website still says two, so fix that.

--- a/content/distrominiconf.html
+++ b/content/distrominiconf.html
@@ -29,7 +29,7 @@ participating.</p>
 
 <p>In more detail:</p>
 <ul>
-    <li>Two (of the largest) devrooms will be allocated for the distro miniconf on both Saturday and Sunday,</li>
+    <li>One (of the largest) devrooms will be allocated for the distro miniconf on both Saturday and Sunday,</li>
     <li>sessions will be scheduled by topic (see below)</li>
     <li>every project is welcome to join in <tt>:)</tt></li>
 </ul>
