index: spell Solbosch correctly consistently
While here, fix the proportions of the location map.  Maybe we need a map
of Brussels here though, rather than a map of the venue?  Something to
think about.

--- a/content/index.html
+++ b/content/index.html
@@ -60,18 +60,19 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
   </div>
   <div class="location-block">
     <h2>LOCATION</h2>
-    <p>FOSDEM will take place at the ULB Campus Solbosch, <strong>Brussels,</strong> <span>Belgium,</span> Europe, Earth.</p>
+    <p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
     <div class="location-info">
       <div class="map">
-        <img style="float: right; text-align: right" src="asset:campusmap"
-width="372" height="261" alt="ULB Campus Solbosch map: Location of FOSDEM" title="ULB Campus Solbosch map: Location of FOSDEM"}/>
+        <img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
       </div>
       <div class="location-text">
         <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
         <ul class="location-list">
-          <li>ULB Campus Solbosh</li>
-          <li><address>Avenue Franklin D. Roosevelt, 50</address></li>
+	  <li>Université libre de Bruxelles</li>
+          <li>Campus du Solbosch</li>
+          <li>Avenue Franklin D. Roosevelt 50</li>
           <li>1050 Bruxelles</li>
+          <li>Belgium</li>
         </ul>
         <div class="btn-location">
           <a class="btn-purple" href="<%= pathof '/practical/transportation/' %>">venue &amp; travel</a>
