transportation: minor cleanup
This page needs some serious love.  But not from me and not today!

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -3,28 +3,37 @@ title: Transportation
 navtitle: Venue & travel
 sponsors_under_navigation: true
 ---
-<p>FOSDEM will take place at the ULB Campus Solbosch, Brussels, Belgium, Europe, Earth.</p>
+<p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
 
-<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Campus Solbosch map: Location of FOSDEM" title="ULB Campus Solbosch map: Location of FOSDEM"}/>
+<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
+
+<div class="location-text">
+  <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
+  <ul class="location-list">
+    <li>Université libre de Bruxelles</li>
+    <li>Campus du Solbosch</li>
+    <li>Avenue Franklin D. Roosevelt 50</li>
+    <li>1050 Bruxelles</li>
+    <li>Belgium</li>
+  </ul>
+</div>
 
 <p>
-<b>
-ULB Campus Solbosch<br>
-50, Avenue Franklin D. Roosevelt<br>
-1050 Bruxelles
-</b>
+  FOSDEM is easy to reach by public transport.
+  For details, see below.
+  If you are afraid of getting lost, the following links may be helpful:
 </p>
 
-<p>The event is easily reachable by public transportation. For details, see below.<br>
-If you are afraid of getting lost, the following links might help you:</p>
 <ul class="unstyled">
   <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.google.com/maps?ie=UTF8&amp;z=17&amp;ll=50.812375,4.380734&amp;spn=0.005369,0.011373&amp;om=1">Google Maps</a></li>
   <li><i class="icon-map-marker"></i> <a target="_blank" href="http://openstreetmap.org/?lat=50.81259&amp;lon=4.38137&amp;zoom=17&amp;layers=00B0FTF">OpenStreetMap</a></li>
   <li><i class="icon-map-marker"></i> <a target="_blank" href="http://maps.yahoo.com/#q=Paul+H%C3%A9gerlaan+2%2C+1000+Brussels%2C+Belgium&conf=1&start=1&lat=50.81282&lon=4.380622&zoom=17&mvt=m&trf=0&tt=">Yahoo! Maps</a></li>
 </ul>
+
 <p>
-Or if you prefer GPS coordinates:
+  GPS coordinates:
 </p>
+
 <dl class="dl-horizontal geo">
   <dt>Latitude:</dt>
   <dd class="latitude">50.812375</dd>
@@ -32,15 +41,16 @@ Or if you prefer GPS coordinates:
   <dd class="longitude">4.380734</dd>
 </dl>
 
-<hr />
-<a name="bus"></a><h3>By Bus and/or Tram</h3>
+<hr/>
+
+<a name="bus"></a><h3>By bus and/or tram</h3>
 
 <div class="label label-info">
 This information may be outdated by February 2014 and will be updated closer to
 the time.
 </div>
 
-<p>Metro/Tram/Bus lines provided by the public transport company, STIB/MIVB.</p>
+<p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
 <dt><strong>
   <a href="http://www.stib.be/horaires-dienstregeling2.html?linecode=71&amp;x=14&amp;y=12&amp;l=en&amp;fmodule=s&amp;results=s" 
@@ -72,10 +82,10 @@ the time.
 All of them stop at "ULB".<br/>
 </p>
 
-<a name="train"></a><h3>By Train</h3>
+<a name="train"></a><h3>By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take the <a href="http://stib.be/appl/EN/40000Eng/M/40002E.htm">Metro line 2</a>, direction Simonis (elisabeth)</li>
+<li>Take the <a href="http://stib.be/appl/EN/40000Eng/M/40002E.htm">Metro line 2</a>, direction Simonis (Elisabeth)</li>
 <li>Get off at station <u>Louise</u></li>
 <li>Take the <a href="http://stib.be/appl/EN/40000Eng/T/40094E.htm">tram 94</a>, direction Herrmann-Debroux</li>
 <li>Get off at stop <u>ULB</u>.</li></ul></p>
@@ -108,7 +118,7 @@ You can park here at your own risk.
 Do not leave any valuables in your car!
 </p>
 
-<a name="plane"></a><h3>By Plane</h3>
+<a name="plane"></a><h3>By plane</h3>
 <p>
 From Brussels International Airport, located in <b>Zaventem</b> (about 50 minutes):
 <ul style="margin-top:0">
@@ -120,7 +130,7 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 </p>
 
 <hr />
-<h2>Related Resources</h2>
+<h2>Related resources</h2>
 <ul>
 <li><a target="_blank" href="http://en.wikivoyage.org/wiki/Brussels#Get_in"
        title="Wikivoyage: How to get to Brussels">
