--- a/content/certification.html
+++ b/content/certification.html
@@ -1,8 +1,108 @@
 ---
 title: Certification exams
 ---
+<%
+# vim: et ft=eruby sw=2 ts=2
+certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_datetime]}
+%>
 
 <p>
-  A number of certification exams will be offered at <%= conference()[:title]
-  %>.  Further details will be announced when they become available.
+  A number of certification exams will be offered at <%= conference()[:title] %>.
 </p>
+
+<p>
+  The <a href="http://lpi.org/">Linux Professional Institute</a> and the <a
+  href="http://bsdcertification.org/">BSD Certification Group</a>
+  will organise exam sessions during <%= conference()[:title] %>.
+  Interested candidates will be able to
+  register for exams with the respective certification groups.
+</p>
+
+<h2>Exam schedule</h2>
+<% unless certs.empty? %>
+  <p>
+    The <a href="<%= pathof '/schedule/' %>#certification">schedule for the
+    exam sessions</a> is now available.</p>
+<% else %>
+  <p>
+    <span class="label label-info">Certification exams have not been scheduled
+    yet.</span>
+  </p>
+<% end %>
+
+<img src="asset:lpi-big" alt=""
+    style="float:right; margin-left: 1em; margin-right: 1em;"/>
+<a name="lpi"></a>
+<h2>LPI offers discounted certification exams at <%= conference()[:title] %>.</h2>
+<p>
+  As in previous years, the Linux Professional Institute will again offer a
+  discount to examination candidates at <%= conference()[:title] %>.<br/>
+  The level 1, level 2 and level 3 exams are offered at a <strong>discount of
+  nearly 50%</strong>.
+</p>
+</div>
+
+<p>
+  The following examinations are offered.
+  Exams will be in English (all LPICs) or French (LPIC 101 and 102 only).
+</p>
+
+<table class="table table-striped table-bordered table-condensed">
+  <thead>
+    <tr>
+      <th>Certification</th>
+      <th>Exams</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="http://www.lpi.org/linux-certifications/introductory-programs/linux-essentials">Linux Essentials</a></td>
+      <td></td>
+      <td>&euro; 50.00</td>
+    </tr>
+    <tr>
+      <td><a href="http://www.lpi.org/linux-certifications/programs/lpic-1">LPIC-1</a></td>
+      <td>101, 102</td>
+      <td>&euro; 90.00</td>
+    </tr>
+    <tr>
+      <td><a href="http://www.lpi.org/linux-certifications/programs/lpic-2">LPIC-2</a></td>
+      <td>201, 202</td>
+      <td>&euro; 90.00</td>
+    </tr>
+    <tr>
+      <td><a href="http://www.lpi.org/linux-certifications/programs/lpic-3">LPIC-3</a></td>
+      <td>300, 303, 304</td>
+      <td>&euro; 90.00</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3>Registration procedure</h3>
+<ul>
+  <li>
+    Register for an LPI ID on the following website:<br/>
+    <a href="https://cs.lpi.org/caf/Xamman/register">
+    https://cs.lpi.org/caf/Xamman/register</a>
+  </li>
+  <li>
+    Sign up for a specific exam session at:<br/>
+    <a href="http://lpievent.lpice.eu/">
+    http://lpievent.lpice.eu/</a><br/>
+    Note that due to limited seating, there is a maximum of
+    50 candidates per session.
+  </li>
+  <li>
+    You must bring valid photo identification and your LPI
+    ID to the exam lab.
+  </li>
+  <li>
+    Pay for the exam at FOSDEM (in cash).
+  </li>
+</ul>
+
+<h3>About LPI</h3>
+<% lpi = speaker 'lpi_team' %>
+<%= lpi[:abstract] %>
+<%= lpi[:description] %>
