accommodation: update FunKey offer

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -41,88 +41,8 @@ places to stay.</p>
 </p>
 
 <p>
-  Their offer includes the following:
-
-  <ul>
-    <li>25 Euro per bed, per night</li>
-    <li>Breakfast</li>
-    <li>Wireless network</li>
-    <li>24/7 snacking and beverages</li>
-    <li>Free parking</li>
-    <li>The use of their Chromebook laptops</li>
-    <li>The use of their mobile phones (with unlimited calls in Belgium)</li>
-  </ul>
+  <b>Update 20131209: all rooms have been booked.</b>
 </p>
-
-<p>
-  They have the following fully equipped rooms available:
-
-  <ul>
-    <li>9x 2-bed rooms</li>
-    <li>18x 3-bed rooms</li>
-    <li>7x 4-bed rooms</li>
-  </ul>
-</p>
-
-<p>
-  <b>Update 20131030: only 30 beds left in 3- or 4-bed rooms</b>
-</p>
-
-<p>
-  The offer of 25EUR/bed/night is valid for Friday, Saturday and Sunday night.
-</p>
-
-<p>
-  Please try to book as groups of 2, 3, or 4 friends or colleagues. It is
-  also possible to book just one bed and share a room with people you
-  don't know.
-</p>
-
-<p>
-  If you are interested, all you have to do is send an e-mail to Guillaume
-  at <a href="mailto:guillaume@funkeyhotel.com">guillaume@funkeyhotel.com</a>,
-  indicating:
-
-  <ul>
-    <li>Your name(s)</li>
-    <li>How many beds you wish to book</li>
-    <li>If you wish to book both Friday and Saturday night, or only Saturday night</li>
-    <li>If you wish to book Sunday night as well</li>
-  </ul>
-</p>
-
-<p>
-  People wishing to book both Friday and Saturday night have priority
-  until 2013-10-01. This means that Saturday night only bookings will only
-  be confirmed after this date. Bookings for both Friday and Saturday night
-  can be paid immediately and will be instantly confirmed.
-</p>
-
-<p>
-  Payment must be made in advance and is nonrefundable. Guillaume will
-  send you details on how to proceed after you have e-mailed him. You will
-  have the possibility of paying either online with Visa, MasterCard or
-  Bancontact (no American Express, Carte Bleue, Visa Electron or others)
-  or by IBAN.
-</p>
-
-<p>
-  For Friday and Saturday night, the hotel is dedicated only to FOSDEM
-  attendees. You will be able to use the common spaces of the hotel
-  (breakfast room, meeting rooms, ...) at your leisure during your stay,
-  convivial atmosphere and an unforgetable experience!
-</p>
-
-<!--
-<p>
-  If the hotel is sufficiently booked by FOSDEM attendees by 2013-11-01,
-  it will be declared a dedicated FOSDEM attendee hotel and bookings will
-  be permanently closed for non-FOSDEM attendees. FOSDEM guests will then
-  be able to use the common spaces of the hotel (breakfast room, meeting
-  rooms, ...) at their leisure during their stay, providing for a
-  convivial atmosphere and an unforgetable experience!
-</p>
--->
 
 <p>
   You can learn more about the FunKey here:
