stands: fill in 2014 assignments

--- a/content/stands.html
+++ b/content/stands.html
@@ -3,9 +3,57 @@
 title: Stands
 stands:
   K [level 1] (18):
+   - KDE
+   - GNOME
+   - Enlightenment
+   - CentOS
+   - Mageia
+   - OpenMandriva
+   - Fedora
+   - OpenSUSE
+   - Debian
+   - OpenStack
+   - oVirt
+   - OpenShift Origin
+   - Xen
+   - FSFE
+   - Mozilla
+   - Libre Graphics Magazine
+   - OpenStreetMap
+   - GeoSpatial
+   - GSoC
+   - CACert
   K [level 2] (13):
+   - MySQL
+   - Python
+   - Perl
+   - Apache OpenOffice
+   - Jenkins
+   - Puppet
+   - Eclipse
+   - JBoss
+   - LibreOffice
+   - BareOS
+   - Confine
+   - DoudouLinux
+   - Kolab/RoundCube
+   - ElasticSearch
+   - Jabber/XMPP
+   - Jitsi
   AW (9):
+   - OpenPandora
+   - OLinuXino / Hackable Devices
+   - CoreBoot + FlashROM
+   - mbed
+   - OpenEmbedded
+   - WikiMedia
+   - PostgreSQL
+   - BSDs
+   - MAGEEC
   H (3):
+   - O'Reilly
+   - Job Corner
+   - Announcements Corner
 ---
 <%
   # parse stands meta
