--- a/content/support/promote.html
+++ b/content/support/promote.html
@@ -4,26 +4,25 @@ title: Promote
 <h2>Flyers, posters and banners</h2>
 
 <p>These are some <a href="#flyers">flyers</a> to print and <a href="#banners">banners</a> to add
-to your personal (or Free or Open Source project) website in order to reference FOSDEM.</p>
-
-<p>Feel free to use them to promote the event and <a href="page:contact">contact us</a> so
-we can talk about you as well!</p>
+to your personal (or Open Source project) website in order to reference FOSDEM. Feel free to use
+them to promote the event</p>
 
 <p>Our news page has an <a href="page:atom">RSS feed</a>. Feel free to aggregate it!</p>
 
 <a name="flyers"></a><h2>Flyers</h2>
-<p>A flyer for you to print and distribute. We usually print 2 flyers per A4 format page.</p>
+<p>A flyer for you to print and distribute.</p>
 <table class="table">
     <tbody>
         <tr>
           <%
             {
-              flyer: 'color',
-              flyer_bw: 'grayscale',
+              flyer_color: 'black',
+              flyer_nobg: 'white',
+              flyer_grayscale: 'grayscale',
             }.each do |name, color|
               name = name.to_s
-              flyer = $item_by_id.fetch("/assets/#{name}/")
-              thumb = $item_by_id.fetch("/assets/#{name}-thumb/")
+              flyer = $item_by_id.fetch("/assets/promote/flyer/#{name}/")
+              thumb = $item_by_id.fetch("/assets/promote/flyer/#{name}-thumb/")
               w, h = image_size(thumb[:filename])
             %>
             <td>
@@ -32,9 +31,6 @@ we can talk about you as well!</p>
                 (<%= filesize flyer %>)<br/>
                 <ul>
                     <li><a href="<%= flyer.path %>">PDF</a></li>
-                    <% ['600', '300', '90'].each do |dpi| %>
-                        <li><a href="<%= pathof "/assets/#{name}-#{dpi}dpi/" %>">PNG (<%= dpi %>dpi)</a></li>
-                    <% end %>
                 </ul>
             </td>
             <% end %>
@@ -42,22 +38,13 @@ we can talk about you as well!</p>
     </tbody>
 </table>
 
-<p>Some good ideas for places to spam are:</p>
-<ul>
-    <li>Computer store</li>
-    <li>Geek friends and fellow hackers</li>
-    <li>University and school</li>
-    <li>At work (yes yes, don't be shy)</li>
-    <li>Hang one on your car</li>
-    <li>&hellip;</li>
-</ul>
-
-<a name="badges"></a><h2>Web Badges</h2>
+<a name="banners"></a><h2>Banners</h2>
 <table class="table table-striped table-bordered">
     <tbody>
         <%
+          # pro tip: do not name your banner files 250x250.png etc, they will be blocked by adblock
           @items.select do |i|
-            i.identifier =~ %r{^/assets/badge/[^/]+/$} and i.binary? and ['png', 'gif', 'jpg', 'jpeg'].include? i[:extension]
+            i.identifier =~ %r{^/assets/promote/banner/[^/]+/$} and i.binary? and ['png', 'gif', 'jpg', 'jpeg'].include? i[:extension]
           end
           .sort_by{|i| i.identifier}
           .each do |badge|
